# bovw-place-recognition

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: 01-create_image_browser.cpp  01-visualizing_sift_keypoints.cpp  02-compute_vocab.cpp  03_plot_vocab.cpp  04-compute_histogram.cpp  05-complete_search_solution.cpp  CMakeLists.txt  bow_dictionary.cpp  bow_dictionary.hpp  convert_dataset.cpp  convert_dataset.hpp  histogram.cpp  histogram.hpp  html_writer.cpp  image_browser.cpp  kmeans.cpp  kmeans.hpp  main.cpp  serialize.cpp  serialize.hpp  tfidf.cpp  tfidf.hpp
tests/: CMakeLists.txt  test_bow_dictionary.cpp  test_bow_dictionary_build.cpp  test_data.cpp  test_data.hpp  test_histograms.cpp  test_main.cpp  test_tfidf.cpp  utils.hpp
web_app/: example.html
